--- a/frontend/src/components/CandidateRegister.css
+++ b/frontend/src/components/CandidateRegister.css
@@ -1,92 +1,88 @@
-.registration-container {
+.container {
     display: flex;
+    justify-content: center;
     align-items: center;
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
+    height: 100vh;
+    margin-top: 100px;
+    background-color: #f5f5f5;
 }
 
-.registration-title {
+.card {
+    max-width: 400px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.heading {
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 20px;
-    text-align: center;
     color: #333;
 }
 
-.registration-form {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
+.card-image {
+    width: 100%;
+    margin-bottom: 20px;
+    border-radius: 8px;
 }
 
 .form-group {
     margin-bottom: 20px;
 }
 
-label {
-    font-size: 14px;
+.label {
+    display: block;
     font-weight: bold;
-    color: #555;
+    margin-bottom: 5px;
 }
 
-input[type='text'],
-input[type='email'],
-textarea {
+.input {
     width: 100%;
-    padding: 12px;
+    padding: 8px;
+    border-radius: 4px;
     border: 1px solid #ccc;
-    border-radius: 6px;
-    font-size: 14px;
-    color: #333;
+    outline: none;
 }
 
-select {
+.button {
     width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    font-size: 14px;
-    color: #333;
-}
-
-button[type='submit'] {
-    background-color: #4285f4;
+    padding: 10px;
+    background-color: #007bff;
     color: #fff;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 6px;
-    font-size: 16px;
     font-weight: bold;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
 }
 
-button[type='submit']:hover {
-    background-color: #0d47a1;
+.button:hover {
+    background-color: #0069d9;
 }
 
-/* React Toastify Styles */
-
-/* .Toastify__toast-container {
-    width: 300px;
-} */
-
-/* .Toastify__toast--success {
-    background-color: #43a047;
-    color: #fff;
+.text {
+    text-align: center;
+    font-size: 14px;
 }
 
-.Toastify__toast--error {
-    background-color: #d32f2f;
-    color: #fff;
-} */
+.link {
+    color: #007bff;
+    text-decoration: none;
+    cursor: pointer;
+}
 
-.profile-image {
-    width: 200px;
-    /* Adjust the width as needed */
-    height: auto;
-    margin-right: 20px;
+.link:hover {
+    text-decoration: underline;
+}
+
+.footer {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 12px;
+    color: #777;
 }
